--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-banana-i18n",
-  "version": "1.0.10",
-  "description": "Vue i18n beased on Banana-i18n",
+  "version": "1.0.1",
+  "description": "A Banana-i18n wrapper to support localization in Vue.js",
   "author": {
     "name": "Santhosh Thottingal",
     "email": "santhosh.thottingal@gmail.com"
