--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,3 @@
 {
-  "extends": "standard",
-  "env": {
-    "browser": true,
-    "node": true
-  },
-  "parserOptions": {
-    "ecmaVersion": 6,
-    "sourceType": "module"
-  }
+  "extends": "standard"
 }
