--- a/package.json
+++ b/package.json
@@ -20,28 +20,33 @@
     "internationalization"
   ],
   "scripts": {
-    "test": "NODE_ENV=test mocha",
-    "build": "webpack"
+    "build": "webpack",
+    "test:unit": "vue-cli-service test:unit",
+    "lint": "vue-cli-service lint",
+    "test": "npm run lint && npm run test:unit"
   },
   "dependencies": {
     "banana-i18n": "^1.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@vue/cli-plugin-babel": "^4.3.1",
+    "@vue/cli-plugin-eslint": "^4.3.1",
+    "@vue/cli-plugin-unit-jest": "^4.3.1",
+    "@vue/cli-service": "^4.3.1",
+    "@vue/test-utils": "^1.0.2",
     "babel-preset-env": "1.7.0",
     "babel-register": "^6.26.0",
     "eslint": "^5.9.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-node": "^8.0.0",
-    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "jsdom": "15.1.1",
     "jsdom-global": "3.0.2",
-    "mocha": "^7.1.2",
-    "mocha-eslint": "^4.1.0",
     "vue": "^2.6.11",
-    "webpack": "^4.43.0",
+    "vue-template-compiler": "^2.6.11",
     "webpack-cli": "^3.3.11"
   }
 }
