--- a/package.json
+++ b/package.json
@@ -10,7 +10,17 @@
     "url": "git+https://github.com/santhoshtr/vue-banana-i18n.git"
   },
   "license": "MIT",
-  "main": "dist/vue-banana-i18n.js",
+  "files": [
+    "dist"
+  ],
+  "main": "./dist/vue-banana-i18n.umd.js",
+  "module": "./dist/vue-banana-i18n.es.js",
+  "exports": {
+    ".": {
+      "import": "./distvue-banana-i18n.es.js",
+      "require": "./dist/vue-banana-i18n.umd.js"
+    }
+  },
   "homepage": "github.com/santhoshtr/vue-banana-i18n",
   "keywords": [
     "vue",
@@ -20,28 +30,22 @@
     "internationalization"
   ],
   "scripts": {
-    "build": "rollup -c",
+    "build": "vite build",
     "lint": "eslint src test",
+    "test:unit": "vitest run",
+    "test:dev": "vitest",
     "test": "npm run lint && npm run test:unit"
   },
   "dependencies": {
-    "banana-i18n": "^2.2.0"
+    "banana-i18n": "^2.3.2"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^20.0.0",
-    "@rollup/plugin-node-resolve": "^13.0.4",
-    "@vue/compiler-sfc": "^3.2.1",
-    "@vue/test-utils": "^2.0.0-rc.12",
-    "eslint": "^7.32.0",
+    "@vitejs/plugin-vue": "^2.0.1",
+    "@vue/test-utils": "^2.0.0-rc.18",
+    "eslint": "^8.7.0",
     "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.24.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-vue": "^7.15.2",
-    "jsdom": "17.0.0",
-    "jsdom-global": "3.0.2",
-    "rollup": "^2.46.0",
-    "rollup-plugin-esbuild": "^4.5.0",
-    "vue": "^3.2.3"
+    "vite": "^2.7.13",
+    "vitest": "^0.1.26",
+    "vue": "^3.2.28"
   }
 }
