--- a/package.json
+++ b/package.json
@@ -37,13 +37,17 @@
     "test": "npm run lint && npm run test:unit"
   },
   "dependencies": {
-    "banana-i18n": "^2.3.2"
+    "banana-i18n": "^2.3.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.0.1",
     "@vue/test-utils": "^2.0.0-rc.18",
-    "eslint": "^8.7.0",
+    "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.2.0",
+    "jsdom": "^19.0.0",
     "vite": "^2.7.13",
     "vitest": "^0.1.26",
     "vue": "^3.2.28"
